// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeTransfer renders correctly 1`] = `
<div
  class="lucio-tree-transfer"
>
  <div
    class="tree-transfer-panel tree-transfer-panel-left"
  >
    <div
      class="tree-transfer-panel-header"
    >
      <span
        class="tree-transfer-panel-header-select"
      >
        1/2 条数据
      </span>
      <span
        class="tree-transfer-panel-header-title"
      >
        源数据
      </span>
    </div>
    <div
      class="tree-transfer-panel-body"
    >
      <div
        class="ant-spin-nested-loading"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="tree-transfer-panel-body-content"
          >
            <ul
              class="ant-tree ant-tree-icon-hide"
              role="tree"
              unselectable="on"
            >
              <li
                class="ant-tree-treenode-switcher-open ant-tree-treenode-checkbox-indeterminate"
                role="treeitem"
              >
                <span
                  class="ant-tree-switcher ant-tree-switcher_open"
                >
                  <i
                    aria-label="icon: caret-down"
                    class="anticon anticon-caret-down ant-tree-switcher-icon"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="caret-down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="0 0 1024 1024"
                      width="1em"
                    >
                      <path
                        d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                      />
                    </svg>
                  </i>
                </span>
                <span
                  class="ant-tree-checkbox ant-tree-checkbox-indeterminate"
                >
                  <span
                    class="ant-tree-checkbox-inner"
                  />
                </span>
                <span
                  class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                  title="0"
                >
                  <span
                    class="ant-tree-title"
                  >
                    0
                  </span>
                </span>
                <ul
                  class="ant-tree-child-tree ant-tree-child-tree-open"
                  data-expanded="true"
                  role="group"
                >
                  <li
                    class=""
                    role="treeitem"
                  >
                    <span
                      class="ant-tree-switcher ant-tree-switcher-noop"
                    />
                    <span
                      class="ant-tree-checkbox"
                    >
                      <span
                        class="ant-tree-checkbox-inner"
                      />
                    </span>
                    <span
                      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                      title="0-0"
                    >
                      <span
                        class="ant-tree-title"
                      >
                        0-0
                      </span>
                    </span>
                  </li>
                  <li
                    class="ant-tree-treenode-checkbox-checked"
                    role="treeitem"
                  >
                    <span
                      class="ant-tree-switcher ant-tree-switcher-noop"
                    />
                    <span
                      class="ant-tree-checkbox ant-tree-checkbox-checked"
                    >
                      <span
                        class="ant-tree-checkbox-inner"
                      />
                    </span>
                    <span
                      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                      title="0-1"
                    >
                      <span
                        class="ant-tree-title"
                      >
                        0-1
                      </span>
                    </span>
                  </li>
                </ul>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="tree-transfer-operation"
  >
    <button
      class="ant-btn ant-btn-primary ant-btn-sm ant-btn-icon-only"
      disabled=""
      type="button"
    >
      <i
        aria-label="icon: right"
        class="anticon anticon-right"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="right"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
          />
        </svg>
      </i>
    </button>
    <button
      class="ant-btn ant-btn-primary ant-btn-sm ant-btn-icon-only"
      disabled=""
      type="button"
    >
      <i
        aria-label="icon: left"
        class="anticon anticon-left"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="left"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
          />
        </svg>
      </i>
    </button>
  </div>
  <div
    class="tree-transfer-panel tree-transfer-panel-right"
  >
    <div
      class="tree-transfer-panel-header"
    >
      <label
        class="ant-checkbox-wrapper"
      >
        <span
          class="ant-checkbox"
        >
          <input
            class="ant-checkbox-input"
            type="checkbox"
          />
          <span
            class="ant-checkbox-inner"
          />
        </span>
      </label>
      <span
        class="tree-transfer-panel-header-select"
      >
        1 条数据
      </span>
      <span
        class="tree-transfer-panel-header-title"
      >
        目的数据
      </span>
    </div>
    <div
      class="tree-transfer-panel-body"
    >
      <ul
        class="tree-transfer-panel-body-content"
      >
        <li>
          <label
            class="ant-checkbox-wrapper"
          >
            <span
              class="ant-checkbox"
            >
              <input
                class="ant-checkbox-input"
                type="checkbox"
              />
              <span
                class="ant-checkbox-inner"
              />
            </span>
          </label>
          <span>
            0-1
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`TreeTransfer should support loading 1`] = `
<div
  class="lucio-tree-transfer"
>
  <div
    class="tree-transfer-panel tree-transfer-panel-left"
  >
    <div
      class="tree-transfer-panel-header"
    >
      <span
        class="tree-transfer-panel-header-select"
      >
        1/2 条数据
      </span>
      <span
        class="tree-transfer-panel-header-title"
      >
        源数据
      </span>
    </div>
    <div
      class="tree-transfer-panel-body"
    >
      <div
        class="ant-spin-nested-loading"
      >
        <div>
          <div
            class="ant-spin ant-spin-sm ant-spin-spinning"
          >
            <span
              class="ant-spin-dot ant-spin-dot-spin"
            >
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
            </span>
          </div>
        </div>
        <div
          class="ant-spin-container ant-spin-blur"
        >
          <div
            class="tree-transfer-panel-body-content"
          >
            <ul
              class="ant-tree ant-tree-icon-hide"
              role="tree"
              unselectable="on"
            >
              <li
                class="ant-tree-treenode-switcher-open ant-tree-treenode-checkbox-indeterminate"
                role="treeitem"
              >
                <span
                  class="ant-tree-switcher ant-tree-switcher_open"
                >
                  <i
                    aria-label="icon: caret-down"
                    class="anticon anticon-caret-down ant-tree-switcher-icon"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="caret-down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="0 0 1024 1024"
                      width="1em"
                    >
                      <path
                        d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                      />
                    </svg>
                  </i>
                </span>
                <span
                  class="ant-tree-checkbox ant-tree-checkbox-indeterminate"
                >
                  <span
                    class="ant-tree-checkbox-inner"
                  />
                </span>
                <span
                  class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                  title="0"
                >
                  <span
                    class="ant-tree-title"
                  >
                    0
                  </span>
                </span>
                <ul
                  class="ant-tree-child-tree ant-tree-child-tree-open"
                  data-expanded="true"
                  role="group"
                >
                  <li
                    class=""
                    role="treeitem"
                  >
                    <span
                      class="ant-tree-switcher ant-tree-switcher-noop"
                    />
                    <span
                      class="ant-tree-checkbox"
                    >
                      <span
                        class="ant-tree-checkbox-inner"
                      />
                    </span>
                    <span
                      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                      title="0-0"
                    >
                      <span
                        class="ant-tree-title"
                      >
                        0-0
                      </span>
                    </span>
                  </li>
                  <li
                    class="ant-tree-treenode-checkbox-checked"
                    role="treeitem"
                  >
                    <span
                      class="ant-tree-switcher ant-tree-switcher-noop"
                    />
                    <span
                      class="ant-tree-checkbox ant-tree-checkbox-checked"
                    >
                      <span
                        class="ant-tree-checkbox-inner"
                      />
                    </span>
                    <span
                      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                      title="0-1"
                    >
                      <span
                        class="ant-tree-title"
                      >
                        0-1
                      </span>
                    </span>
                  </li>
                </ul>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="tree-transfer-operation"
  >
    <button
      class="ant-btn ant-btn-primary ant-btn-sm ant-btn-icon-only"
      disabled=""
      type="button"
    >
      <i
        aria-label="icon: right"
        class="anticon anticon-right"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="right"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
          />
        </svg>
      </i>
    </button>
    <button
      class="ant-btn ant-btn-primary ant-btn-sm ant-btn-icon-only"
      disabled=""
      type="button"
    >
      <i
        aria-label="icon: left"
        class="anticon anticon-left"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="left"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
          />
        </svg>
      </i>
    </button>
  </div>
  <div
    class="tree-transfer-panel tree-transfer-panel-right"
  >
    <div
      class="tree-transfer-panel-header"
    >
      <label
        class="ant-checkbox-wrapper"
      >
        <span
          class="ant-checkbox"
        >
          <input
            class="ant-checkbox-input"
            type="checkbox"
          />
          <span
            class="ant-checkbox-inner"
          />
        </span>
      </label>
      <span
        class="tree-transfer-panel-header-select"
      >
        1 条数据
      </span>
      <span
        class="tree-transfer-panel-header-title"
      >
        目的数据
      </span>
    </div>
    <div
      class="tree-transfer-panel-body"
    >
      <ul
        class="tree-transfer-panel-body-content"
      >
        <li>
          <label
            class="ant-checkbox-wrapper"
          >
            <span
              class="ant-checkbox"
            >
              <input
                class="ant-checkbox-input"
                type="checkbox"
              />
              <span
                class="ant-checkbox-inner"
              />
            </span>
          </label>
          <span>
            0-1
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`TreeTransfer should support sourceTitle and targetTitle 1`] = `
<div
  class="lucio-tree-transfer"
>
  <div
    class="tree-transfer-panel tree-transfer-panel-left"
  >
    <div
      class="tree-transfer-panel-header"
    >
      <span
        class="tree-transfer-panel-header-select"
      >
        1/2 条数据
      </span>
      <span
        class="tree-transfer-panel-header-title"
      >
        1
      </span>
    </div>
    <div
      class="tree-transfer-panel-body"
    >
      <div
        class="ant-spin-nested-loading"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="tree-transfer-panel-body-content"
          >
            <ul
              class="ant-tree ant-tree-icon-hide"
              role="tree"
              unselectable="on"
            >
              <li
                class="ant-tree-treenode-switcher-open ant-tree-treenode-checkbox-indeterminate"
                role="treeitem"
              >
                <span
                  class="ant-tree-switcher ant-tree-switcher_open"
                >
                  <i
                    aria-label="icon: caret-down"
                    class="anticon anticon-caret-down ant-tree-switcher-icon"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="caret-down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="0 0 1024 1024"
                      width="1em"
                    >
                      <path
                        d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                      />
                    </svg>
                  </i>
                </span>
                <span
                  class="ant-tree-checkbox ant-tree-checkbox-indeterminate"
                >
                  <span
                    class="ant-tree-checkbox-inner"
                  />
                </span>
                <span
                  class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                  title="0"
                >
                  <span
                    class="ant-tree-title"
                  >
                    0
                  </span>
                </span>
                <ul
                  class="ant-tree-child-tree ant-tree-child-tree-open"
                  data-expanded="true"
                  role="group"
                >
                  <li
                    class=""
                    role="treeitem"
                  >
                    <span
                      class="ant-tree-switcher ant-tree-switcher-noop"
                    />
                    <span
                      class="ant-tree-checkbox"
                    >
                      <span
                        class="ant-tree-checkbox-inner"
                      />
                    </span>
                    <span
                      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                      title="0-0"
                    >
                      <span
                        class="ant-tree-title"
                      >
                        0-0
                      </span>
                    </span>
                  </li>
                  <li
                    class="ant-tree-treenode-checkbox-checked"
                    role="treeitem"
                  >
                    <span
                      class="ant-tree-switcher ant-tree-switcher-noop"
                    />
                    <span
                      class="ant-tree-checkbox ant-tree-checkbox-checked"
                    >
                      <span
                        class="ant-tree-checkbox-inner"
                      />
                    </span>
                    <span
                      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                      title="0-1"
                    >
                      <span
                        class="ant-tree-title"
                      >
                        0-1
                      </span>
                    </span>
                  </li>
                </ul>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="tree-transfer-operation"
  >
    <button
      class="ant-btn ant-btn-primary ant-btn-sm ant-btn-icon-only"
      disabled=""
      type="button"
    >
      <i
        aria-label="icon: right"
        class="anticon anticon-right"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="right"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
          />
        </svg>
      </i>
    </button>
    <button
      class="ant-btn ant-btn-primary ant-btn-sm ant-btn-icon-only"
      disabled=""
      type="button"
    >
      <i
        aria-label="icon: left"
        class="anticon anticon-left"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="left"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
          />
        </svg>
      </i>
    </button>
  </div>
  <div
    class="tree-transfer-panel tree-transfer-panel-right"
  >
    <div
      class="tree-transfer-panel-header"
    >
      <label
        class="ant-checkbox-wrapper"
      >
        <span
          class="ant-checkbox"
        >
          <input
            class="ant-checkbox-input"
            type="checkbox"
          />
          <span
            class="ant-checkbox-inner"
          />
        </span>
      </label>
      <span
        class="tree-transfer-panel-header-select"
      >
        1 条数据
      </span>
      <span
        class="tree-transfer-panel-header-title"
      >
        2
      </span>
    </div>
    <div
      class="tree-transfer-panel-body"
    >
      <ul
        class="tree-transfer-panel-body-content"
      >
        <li>
          <label
            class="ant-checkbox-wrapper"
          >
            <span
              class="ant-checkbox"
            >
              <input
                class="ant-checkbox-input"
                type="checkbox"
              />
              <span
                class="ant-checkbox-inner"
              />
            </span>
          </label>
          <span>
            0-1
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
